--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.2",
     "time-formater": "^1.1.3"
   }
 }
